# HdrPlus

./: .gitignore  CMakeLists.txt  README.md  run_burst.sh
ISPpipeline/: CMakeLists.txt  DecodeCR2.cpp  testrawisp.cpp
Layer/: CMakeLists.txt  HDRPlus_BlackWhiteLevel.h  HDRPlus_BlockMatchFusion.cpp  HDRPlus_BlockMatchFusion.h  HDRPlus_ChromaDenoise.cpp  HDRPlus_ChromaDenoise.h  HDRPlus_ColorCorect.cpp  HDRPlus_ColorCorect.h  HDRPlus_Contrast.cpp  HDRPlus_Contrast.h  HDRPlus_DPCorrection.cpp  HDRPlus_DPCorrection.h  HDRPlus_Demosaicing.cpp  HDRPlus_Demosaicing.h  HDRPlus_Forward.cpp  HDRPlus_Forward.h  HDRPlus_GammaCorrect.cpp  HDRPlus_Tonemapping.cpp
Mat/: CMakeLists.txt  Common.cpp  Common.h  Mat.h  MultiUcharImage.cpp  MultiUshortImage.cpp  NEONToSSE.h  SingleUcharImage.cpp  SingleUcharImage.h  SubFunction.h  WeightConfig.h
config/: weight.param
